--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://youtube.com/tarcilafurtado" target="_blank">
+        <a href="https://youtube.com/@tarcilafurtado5839" target="_blank">
           <ion-icon name="logo-youtube"></ion-icon>
         </a>
 
-        <a href="https://linkedin.com/in/tarcilafurtado" target="_blank">
+        <a href="https://linkedin.com/in/tarcila-furtado-639825264" target="_blank">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
